Ep: 4 - Implementation of all the Restaurant cards according to the live data from Swiggy.
1. Use of map
2. use of key for each res card
3. Why we should not use key={index} in a large scale applications

--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
   },
   "browserslist": "last 2 versions",
   "devDependencies": {
-    "parcel": "^2.15.4",
-    "process": "^18.2.0"
+    "parcel": "^2.15.4"
   }
 }
